feat: add desktop hero w/out some hovers and refactor webpack-config

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,9 +1,11 @@
 @font-face {
-    font-family: "MullerRegular";
-    src: url(../fonts/MullerRegular.ttf) format('truetype');
+    font-family: "Muller";
+    font-weight: 400;
+    src: url('../fonts/MullerRegular.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: "MullerMedium";
-    src: url(../fonts/MullerMedium.ttf) format('truetype');
+    font-family: "Muller";
+    font-weight: 500;
+    src: url('../fonts/MullerMedium.ttf') format('truetype');
 }
