--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,4 +3,8 @@
 @import "variables.scss";
 @import "body.scss";
 
+@import "page-title.scss";
+@import "button.scss";
+
 @import "header.scss";
+@import "hero.scss";
