--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -9,16 +9,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 100;
 
     &__tel {
         text-decoration: none;
         display: flex;
         align-items: center;
         color: $black;
-        font-family: $font-family-accent;
         font-size: 21px;
         line-height: 1.2;
-        transition: .1s color ease-in-out;
+        transition: .15s color ease-in-out;
 
         &:hover {
             color: $orange;
