--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,8 @@
 $black: #000 !default;
 $white: #fff !default;
+$gray: #666 !default;
 $orange: #f9572e !default;
+$hover-orange: #ff7b59 !default;
 
-$font-family-base: 'MullerMedium', sans-serif !default;
-$font-family-accent: 'MullerRegular', sans-serif !default;
+$font-family-base: 'Muller', sans-serif !default;
+$letter-spacing: -0.01px;
