--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -13,6 +13,16 @@
     text-decoration: none;
     transition: .15s background-color ease-in-out, .15s box-shadow ease-in-out;
 
+    @media (max-width: $xl) {
+        padding: 14px 24px;
+        font-size: 14px;
+    }
+
+    @media (max-width: $sm) {
+        padding: 12px 20px;
+        font-size: 13px;
+    }
+
     &:hover {
         background-color: $hover-orange;
         box-shadow: 0px 7px 15px rgba(249, 87, 46, 0.7);
