feat: add container

--- a/src/styles/_.scss
+++ b/src/styles/_.scss
@@ -3,6 +3,7 @@
 @import "base/variables";
 @import "base/body";
 
+@import "container";
 @import "page-title";
 @import "block-title";
 @import "block-subtitle";
