--- a/src/styles/_promo.scss
+++ b/src/styles/_promo.scss
@@ -1,28 +1,31 @@
 .promo {
-    padding: 166px 450px 130px;
+    padding: 166px 0 130px;
+    width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
 
     @media (max-width: $hd) {
-        padding: 140px 350px 110px;
+        padding: 140px 0 110px;
     }
 
     @media (max-width: $xxl) {
-        padding: 120px 300px 90px;
+        padding: 120px 0 90px;
     }
 
     @media (max-width: $xl) {
-        padding: 100px 200px 80px;
+        padding: 100px 0 80px;
     }
 
     @media (max-width: $lg) {
-        padding: 90px 170px 70px;
+        padding: 90px 0 70px;
     }
 
     @media (max-width: $md) {
-        padding: 80px 100px 60px;
+        padding: 80px 0 60px;
     }
 
     @media (max-width: $sm) {
-        padding: 70px 40px 50px;
+        padding: 70px 0 50px;
     }
 
     &__wrapper {
