--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -9,6 +9,8 @@ $hd: 1920px;
 $black: #000;
 $white: #fff;
 $gray: #666;
+$gray-background: #f2f2f2;
+$gray-border: #ccc;
 $orange: #f9572e;
 $hover-orange: #ff7b59;
 $blue: #33b5a3;
