feat: add adaptive feedback

--- a/src/styles/_.scss
+++ b/src/styles/_.scss
@@ -8,8 +8,10 @@
 @import "block-title";
 @import "block-subtitle";
 @import "button";
+@import "form-element";
 
 @import "header";
 @import "hero";
 @import "promo";
+@import "feedback";
 @import "footer";
