--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -9,6 +9,7 @@ $hd: 1920px;
 $black: #000;
 $white: #fff;
 $gray: #666;
+$gray-darker: #383838;
 $gray-background: #f2f2f2;
 $gray-border: #ccc;
 $orange: #f9572e;
